kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  namespace: lone1

spec:
  type: ClusterIP
  selector:
    app: backend-api
  ports:
    - port: 8000
      targetPort: 8000
