kubernetes/predictor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-predictor-service
  namespace: lone1

spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: ml-predictor
